<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MovieApp</string>

    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>

    <string name="now_playing">NOW PLAYING</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>

    <string name="presale">PRE SALE</string>
    <string name="presale_desc">Tidak khawatir ketinggalan\nupdate film terbaru</string>

    <string name="cashless">CASHLESS</string>
    <string name="cashless_desc">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>


    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk_akun">Masuk Akun</string>


    <string name="sign_up">Sign Up</string>
    <string name="daftar_akun">Daftar Akun</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="retype_password">Retype Password</string>
    <string name="nama">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="simpan_lanjutkan">SIMPAN DAN LANJUTKAN</string>


    <string name="home_name">Fakhry Mubarak</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="checkout">Checkout</string>
    <string name="cinema">Cinema</string>

    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="edit_profil">Edit Profil</string>
    <string name="my_wallet">My Wallet</string>
    <string name="top_up">Top Up</string>
    <string name="history">History</string>
    <string name="batal">Batalkan</string>

    <string name="simpah_perubahan">Simpan Perubahan</string>

    <string name="happy_watch">Happy Watching!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="img_onboarding">onboarding preview image</string>
    <string name="kembali_ke_beranda">KEMBALI KE DASHBOARD</string>
    <string name="berhasil_beli">Tiket telah berhasil dibeli\nSelamat menikmati filmmu!</string>
    <string name="tiketmu">Tiketmu</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="sign_out">Sign Out Akun</string>
    <string name="sign_in_other">Other Sign In Method</string>
    <string name="batalkan">batalkan</string>
    <string name="amount">Amount</string>

    <string name="alert1">Kamu yakin membeli tiket?</string>
    <string name="alert2">Beli Tiket?</string>

    <string name="qr_code">Silahkan melakukan scanning pada counter tiket terdekat</string>

    <string name="fee">IDR 70.000</string>
    <string name="rating">7</string>

    <string name="transaksi">26-01-2020 3:16</string>
    <string name="judul">Nonton : Avengers</string>
    <string name="mail">mov@gmail.com</string>

    <string name="when">When</string>
    
    <!-- Tiket Page -->
    <string name="tgl_tiket">12 Aug, 10 AM</string>
    <string name="lok_tiket">Depok Mall, Cinema 3</string>
    <string name="item">Items</string>
    <string name="title">Title</string>
    <string name="textview">TextView</string>
    <string name="print">Quick Print</string>
    <string name="scan">Scan QR</string>

    <!-- Fragment Tiket -->
    <string name="today">Today</string>
    <string name="movie">200 Movies</string>

    <!-- Activity History -->
    <string name="all_movies">2,409 Movies You have Watched</string>

    <!-- Activity Edit Profile -->
    <string name="number">123456</string>
    <string name="edit_nama">Dirga Md</string>
    <string name="new_profile">Save New Profile Picture</string>

    <!-- Activity Check Out -->
    <string name="tv_when">When</string>
    <string name="tgl">20 Jan, 10 AM</string>
    <string name="lok_cinema">J-Walk, Cinema 3</string>
    <string name="harga">IDR 100.000</string>
    <string name="wallet">E-Wallet</string>
    <string name="balance">Total Balance</string>
    <string name="saldo">Saldo pada e-wallet kamu tidak mencukupi\nuntuk melakukan transaksi.</string>

    <!-- Activity Pilih Bangku -->
    <string name="judul_film">Alita Battle</string>
    <string name="layar">Layar Bioskop</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="book">Booked</string>
    <string name="empty">Empty</string>
    <string name="selected">Selected</string>

    <!-- Activity My Wallet -->
    <string name="saldo_wallet">Rp100.000</string>
    <string name="saldo_sisa">Saldo Tersisa</string>
    <string name="daftar_trx">Daftar Transaksi</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="riwayat_masuk">Tidak ada riwayat pemasukan.</string>
    <string name="riwayat_keluar">Tidak ada riwayat pengeluaran.</string>

    <!-- Activity Detail -->
    <string name="judul_detail">Avengers : Infinity War</string>
    <string name="genre_detail">Action, Sci-Fi, Kids</string>
    <string name="storyboard_judul">Storyboard</string>
    <string name="storyboard_detail">The Avengers must stop Thanos, a mad Titan, and his  army from getting their hands on all the infinity stones.  However, the mad Titan is prepared to go to any lengths  to carry out his insane plan.</string>
    <string name="cast_detail" tools:ignore="StringEscaping">Who's Played</string>
    <string name="rating_detail">7</string>

    <!-- Fragment Setting -->
    <string name="setting">Setting</string>
    <string name="update">Keep it up to date</string>
    <string name="nama_fragment_setting">Dirga Md</string>
    <string name="email_fragment_setting">dirga.md@gmail.com</string>
    <string name="languange_fragment_setting">Change Language</string>
    <string name="help">Help</string>

    <!-- Fragment Dashboard -->
    <string name="nama_dashboard">Dirga Md</string>
    <string name="saldo_dashboard">Rp 0</string>

</resources>
